@@ -6,6 +6,8 @@ import com.jessica.libro.dto.Autor;
 import com.jessica.libro.dto.Categoria;
 import com.jessica.libro.dto.LibroDTO;
 import com.jessica.libro.model.Libro;
+import com.jessica.libro.model.LibroAutor;
+import com.jessica.libro.repository.LibroAutorRepository;
 import com.jessica.libro.repository.LibroRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -17,28 +19,25 @@ import java.util.stream.Collectors;
 
 @Service
 public class LibroServices {
-    @Autowired
-    private LibroRepository libroRepository;
 
-    @Autowired
-    private AutorClient autorClient;
-
-    @Autowired
-    private CategoriaClient categoriaClient;
+    @Autowired private LibroRepository libroRepository;
+    @Autowired private LibroAutorRepository libroAutorRepository;
+    @Autowired private AutorClient autorClient;
+    @Autowired private CategoriaClient categoriaClient;
 
     public List<LibroDTO> obtenerTodos() {
         return libroRepository.findAll().stream().map(libro -> {
-            Autor autor = autorClient.getAutorById(libro.getAutorId());
             Categoria categoria = categoriaClient.getCategoriaById(libro.getCategoriaId());
-            return new LibroDTO(libro, autor, categoria);
-        }).collect(Collectors.toList());
+            List<Autor> autores = obtenerAutoresDeLibro(libro.getId());
+            return new LibroDTO(libro, categoria, autores);
+        }).toList();
     }
 
     public Optional<LibroDTO> obtenerPorId(Long id) {
         return libroRepository.findById(id).map(libro -> {
-            Autor autor = autorClient.getAutorById(libro.getAutorId());
             Categoria categoria = categoriaClient.getCategoriaById(libro.getCategoriaId());
-            return new LibroDTO(libro, autor, categoria);
+            List<Autor> autores = obtenerAutoresDeLibro(libro.getId());
+            return new LibroDTO(libro, categoria, autores);
         });
     }
 
@@ -49,9 +48,8 @@ public class LibroServices {
     public Optional<Libro> editarLibro(Long id, Libro datosActualizados) {
         return libroRepository.findById(id).map(libroExistente -> {
             libroExistente.setTitulo(datosActualizados.getTitulo());
-            libroExistente.setAutorId(datosActualizados.getAutorId());
             libroExistente.setEditorial(datosActualizados.getEditorial());
-            libroExistente.setAño(datosActualizados.getAño());
+            libroExistente.setAñoPublicacion(datosActualizados.getAñoPublicacion());
             libroExistente.setCategoriaId(datosActualizados.getCategoriaId());
             libroExistente.setDisponibilidad(datosActualizados.getDisponibilidad());
             return libroRepository.save(libroExistente);
@@ -60,5 +58,12 @@ public class LibroServices {
 
     public void eliminarLibro(Long id) {
         libroRepository.deleteById(id);
+    }
+
+    private List<Autor> obtenerAutoresDeLibro(Long libroId) {
+        List<LibroAutor> relaciones = libroAutorRepository.findByLibroId(libroId);
+        return relaciones.stream()
+                .map(rel -> autorClient.getAutorById(rel.getAutorId()))
+                .toList();
     }
 }
